fix overflow-x auto issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,6 @@
 @layer base {
   body {
     font-family: "Plus Jakarta Sans", sans-serif;
-    overflow-x: auto;
   }
 }
 
